--- a/style.css
+++ b/style.css
@@ -1,9 +1,9 @@
 .box{
     display: inline-block;
-    font-family: "Verdana";
-    color: white;
+    font-family: "Source Serif Pro",Iowan Old Style,Apple Garamond,Palatino Linotype,Times New Roman,"Droid Serif",Times,serif;
+    color: black;
 }
 
 body {
-  background-color: black;
+  background-color: white;
 }
